apps/skein_compiler/test/skein/conformance/negative/direct_cross_module_function_call.skein
-- expect: E0016
module AgentConsumer {
  fn run() -> String {
    BillingService.calculate("ticket-1")
  }
}
